# cert-x-gen-templates

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  TEMPLATE_REGISTRY.json  scan.json
docs/: TEMPLATE_GUIDE.md
playbooks/: dns-rebinding-attack-playbook.md  ghes-saml-encrypted-assertions-exposure-playbook.md  graphql-batching-dos-playbook.md  grpc-reflection-abuse-playbook.md  http2-rapid-reset-playbook.md  jwt-algorithm-confusion-playbook.md  kubelet-api-exposure-playbook.md  oauth-state-confusion-playbook.md  oauth-state-parameter-audit-playbook.md  race-condition-exploit-playbook.md  ssti-engine-fingerprint-playbook.md
scripts/: generate-index.py  validate.sh  validate_yaml.py
templates/: TEMPLATE_REGISTRY.md
templates/c/: directory-traversal.c  redis-unauthenticated.c  sql-injection-detection.c  vnc-no-auth.c  xss-detection.c
templates/clickhouse-auth-bypass/: clickhouse-auth-bypass-playbook.md  clickhouse-auth-bypass-research.docx  clickhouse-auth-bypass.py
templates/cpp/: redis-unauthenticated.cpp
templates/deserialization-gadget-scan/: DeserializationGadgetScan.java  deserialization-gadget-scan-playbook.md
templates/elasticsearch-query-injection/: elasticsearch-query-injection-playbook.md  elasticsearch-query-injection-research.docx  elasticsearch-query-injection.py
templates/ghes-version-fingerprint/: ghes-version-fingerprint-playbook.md  (+1 more)
templates/tls-certificate-deep-analysis/: Cargo.toml  tls-certificate-deep-analysis-playbook.md
templates/tls-certificate-deep-analysis/src/: main.rs
(+230 files in other folders)
